Updated npm extension

--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -75,7 +75,8 @@
     "backofficesolrsearch",
     "apiregistryservices",
     "integrationservices",
-    "integrationbackoffice"
+    "integrationbackoffice",
+    "npmtestancillary"
   ],
   "storefrontAddons": [
     {
